Deprecate the inline-field class Fix overflow on code block to eliminate unnecessary scrollbars

--- a/public/assets/wee/style/components/wee.code.less
+++ b/public/assets/wee/style/components/wee.code.less
@@ -35,7 +35,7 @@
 				word-wrap: break-word;
 			}
 			.sub-rules () when not (@codeBlockWrap = true) {
-				overflow: scroll;
+				overflow: auto;
 				white-space: pre;
 			}
 			background: none;
